--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "perfect-tower-ai-compiler"]
-	path = perfect-tower-ai-compiler
+	path = lib
 	url = git@github.com:hktonylee/perfect-tower-ai-compiler.git
